# CrowdStrike2TH

./: .gitignore  README.md  requirements.txt  setup.cfg
src/: CrowdStrikeAPI.py  config.py  create_alert.py  main.py
src/CrowdStrike/: __init__.py  api.py  detection_parser.py
src/config/: __init__.py  config.py
