[metadata]
name = CrowdStrike2TH
version = 0.0.2
author = Shahar Margalit
author_email = shaharma@gmail.com
description = Falcon CrowdStrike Alert Feeder for TheHive
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sshahar/CrowdStrike2TH/
project_urls =
    Bug Tracker =https://github.com/Sshahar/CrowdStrike2TH//issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src